--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/085astatine/scrapbox-copy-tweets/issues"
   },
-  "homepage": "https://github.com/085astatine/scrapbox-copy-tweets#readme"
+  "homepage": "https://github.com/085astatine/scrapbox-copy-tweets#readme",
+  "devDependencies": {
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
+  }
 }
