--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.19.0",
     "eslint-config-google": "^0.14.0",
     "eslint-webpack-plugin": "^3.2.0",
+    "prettier": "^2.7.1",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
