--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode development",
+    "build:production": "webpack --mode production",
+    "eslint": "eslint src/**/*.ts",
+    "prettier:check": "prettier --check src/",
+    "prettier:write": "prettier --write src/"
   },
   "repository": {
     "type": "git",
