--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-webpack-plugin": "^3.2.0",
+    "npm-check-updates": "^15.2.1",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "ts-loader": "^9.3.1",
