--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rimraf": "^3.0.2",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
+    "web-ext": "^7.1.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   }
