--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "typescript": "^4.7.4",
     "web-ext": "^7.1.1",
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "wext-manifest-loader": "^2.4.1",
+    "wext-manifest-webpack-plugin": "^1.2.1"
   }
 }
