--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode development",
-    "build:production": "webpack --mode production",
+    "chrome:build": "TARGET_BROWSER=chrome webpack --mode development",
+    "chrome:production": "TARGET_BROWSER=chrome webpack --mode production",
+    "firefox:build": "TARGET_BROWSER=firefox webpack --mode development",
+    "firefox:production": "TARGET_BROWSER=firefox webpack --mode production",
     "clean": "rimraf build",
     "eslint": "eslint src/**/*.ts",
     "prettier:check": "prettier --check src/",
