Add (chrome|firerox):watch to scripts in package.json

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "chrome:build": "TARGET_BROWSER=chrome webpack --mode development",
     "chrome:production": "TARGET_BROWSER=chrome webpack --mode production",
     "chrome:run": "PATH=./bin:$PATH TARGET_BROWSER=chrome node web-ext-run.mjs",
+    "chrome:watch": "TARGET_BROWSER=chrome webpack --watch --mode development",
     "firefox:build": "TARGET_BROWSER=firefox webpack --mode development",
     "firefox:production": "TARGET_BROWSER=firefox webpack --mode production",
     "firefox:run": "PATH=./bin:$PATH TARGET_BROWSER=firefox node web-ext-run.mjs",
+    "firefox:watch": "TARGET_BROWSER=firefox webpack --watch --mode development",
     "clean": "rimraf build",
     "eslint": "eslint src/**/*.ts",
     "prettier:check": "prettier --check src/",
