--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,12 @@
 {
   "__chrome__manifest_version": 3,
   "__firefox__manifest_version": 2,
-  "name": "Scrapbox Copy Tweets"
+  "name": "Scrapbox Copy Tweets",
+
+  "content_scripts": [
+    {
+      "matches": ["https://twitter.com/*"],
+      "js": ["content-twitter.js"]
+    }
+  ]
 }
