--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/085astatine/scrapbox-copy-tweets#readme",
   "devDependencies": {
+    "@types/webextension-polyfill": "^0.9.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
@@ -48,6 +49,7 @@
   },
   "dependencies": {
     "typescript-logging": "^2.0.1",
-    "typescript-logging-category-style": "^2.0.1"
+    "typescript-logging-category-style": "^2.0.1",
+    "webextension-polyfill": "^0.9.0"
   }
 }
