--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,6 +13,7 @@
   "content_scripts": [
     {
       "matches": ["https://twitter.com/*"],
+      "run_at": "document_start",
       "js": ["content-twitter.js"]
     }
   ]
