--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "strict": true,
     "rootDir": "src",
     "esModuleInterop": true,
+    "jsx": "react",
     "typeRoots": ["node_modules/@types"]
   },
   "exclude": ["node_modules"]
