--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "eslint": "^8.19.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-webpack-plugin": "^3.2.0",
     "node": "^18.5.0",
     "npm-check-updates": "^15.2.1",
