--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/085astatine/scrapbox-copy-tweets#readme",
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/webextension-polyfill": "^0.9.0",
