--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-webpack-plugin": "^3.2.0",
     "node": "^18.5.0",
     "npm-check-updates": "^15.2.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "ts-loader": "^9.3.1",
