--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-webpack-plugin": "^3.2.0",
     "node": "^18.5.0",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "npm-check-updates": "^15.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
