--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "wext-manifest-webpack-plugin": "^1.2.1"
   },
   "dependencies": {
+    "error-polyfill": "^0.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "twitter-api-v2": "^1.12.5",
