--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/085astatine/scrapbox-copy-tweets#readme",
   "devDependencies": {
+    "@svgr/webpack": "^6.3.1",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
