--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "node": "^18.5.0",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "npm-check-updates": "^15.2.1",
@@ -53,7 +54,6 @@
     "rimraf": "^3.0.2",
     "sass": "^1.55.0",
     "sass-loader": "^13.0.2",
-    "style-loader": "^3.3.1",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "web-ext": "^7.1.1",
