--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "wext-manifest-webpack-plugin": "^1.2.1"
   },
   "dependencies": {
+    "@floating-ui/react-dom": "^1.0.0",
     "error-polyfill": "^0.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
