--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "dependencies": {
     "@floating-ui/react-dom": "^1.0.0",
+    "classnames": "^2.3.2",
     "error-polyfill": "^0.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
