--- a/package.json
+++ b/package.json
@@ -55,6 +55,11 @@
     "rimraf": "^3.0.2",
     "sass": "^1.55.0",
     "sass-loader": "^13.0.2",
+    "stylelint": "^14.14.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended-scss": "^8.0.0",
+    "stylelint-prettier": "^2.0.0",
+    "stylelint-scss": "^4.3.0",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "web-ext": "^7.1.1",
