--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   },
   "dependencies": {
     "@floating-ui/react-dom": "^1.0.0",
+    "ajv": "^8.11.0",
     "classnames": "^2.3.2",
     "error-polyfill": "^0.1.3",
     "react": "^18.2.0",
