--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "stylelint-prettier": "^2.0.0",
     "stylelint-scss": "^4.3.0",
     "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "web-ext": "^7.3.1",
     "webpack": "^5.74.0",
