--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "prettier:write": "prettier --write src/",
     "stylelint:check": "stylelint src/**/*.scss",
     "stylelint:writer": "stylelint --fix src/**/*.scss",
-    "generate-validate-json": "ts-node src/generate-validate-json"
+    "generate-validate-json": "ts-node src/generate-validate-json",
+    "postgenerate-validate-json": "prettier --write src/validate-json/"
   },
   "repository": {
     "type": "git",
