--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "ajv": "^8.11.0",
     "classnames": "^2.3.2",
     "error-polyfill": "^0.1.3",
+    "graphemesplit": "^2.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "twitter-api-v2": "^1.12.9",
