--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "classnames": "^2.3.2",
     "error-polyfill": "^0.1.3",
     "graphemesplit": "^2.4.4",
+    "punycode": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "twitter-api-v2": "^1.12.9",
