--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@trivago/prettier-plugin-sort-imports": "^3.4.0",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "@types/react-redux": "^7.1.24",
     "@types/webextension-polyfill": "^0.9.1",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
@@ -82,6 +83,8 @@
     "punycode": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
     "twitter-api-v2": "^1.12.9",
     "typescript-logging": "^2.0.2",
     "typescript-logging-category-style": "^2.0.2",
