--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
   },
   "dependencies": {
     "@floating-ui/react-dom": "^1.0.0",
+    "@reduxjs/toolkit": "^1.9.0",
     "ajv": "^8.11.0",
     "classnames": "^2.3.2",
     "error-polyfill": "^0.1.3",
