--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-redux": "^4.0.0",
     "eslint-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^2.6.1",
     "node": "^19.0.0",
