--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@types/react-redux": "^7.1.24",
+    "@types/redux-logger": "^3.0.9",
     "@types/webextension-polyfill": "^0.9.1",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
@@ -87,6 +88,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
     "twitter-api-v2": "^1.12.9",
     "typescript-logging": "^2.0.2",
     "typescript-logging-category-style": "^2.0.2",
