--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prettier:check": "prettier --check src/",
     "prettier:write": "prettier --write src/",
     "stylelint:check": "stylelint src/**/*.scss",
-    "stylelint:writer": "stylelint --fix src/**/*.scss",
+    "stylelint:write": "stylelint --fix src/**/*.scss",
     "generate-validate-json": "ts-node src/generate-validate-json",
     "postgenerate-validate-json": "prettier --write src/validate-json/"
   },
