--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@floating-ui/react-dom": "^1.0.0",
     "@reduxjs/toolkit": "^1.9.0",
     "ajv": "^8.11.0",
+    "better-ajv-errors": "^1.2.0",
     "classnames": "^2.3.2",
     "error-polyfill": "^0.1.3",
     "graphemesplit": "^2.4.4",
