--- a/.github/workflows/compressed_size.yaml
+++ b/.github/workflows/compressed_size.yaml
@@ -27,4 +27,4 @@ jobs:
         uses: preactjs/compressed-size-action@v2
         with:
           build-script: all-production
-          pattern: ./build/**/*.{css,js,json}
+          pattern: ./build/production/**/*.{css,js,json}
