Add scripts for --mode=production
Add '*:production' scripts for --mode=production.
Rename all-build and all-production.

--- a/.github/workflows/compressed_size.yaml
+++ b/.github/workflows/compressed_size.yaml
@@ -26,5 +26,5 @@ jobs:
       - name: Compressed Size Action
         uses: preactjs/compressed-size-action@v2
         with:
-          build-script: all-production
+          build-script: build:production
           pattern: ./build/production/**/*.{css,js,json}
