--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "index.js",
   "scripts": {
     "chrome:build": "TARGET_BROWSER=chrome webpack --mode development",
-    "chrome:production": "TARGET_BROWSER=chrome webpack --mode production",
+    "chrome:build:production": "TARGET_BROWSER=chrome webpack --mode production",
     "chrome:run": "PATH=./bin:$PATH TARGET_BROWSER=chrome web-ext run --target=chromium --source-dir=build/development/chrome",
+    "chrome:run:production": "PATH=./bin:$PATH TARGET_BROWSER=chrome web-ext run --target=chromium --source-dir=build/production/chrome",
     "chrome:watch": "TARGET_BROWSER=chrome webpack --watch --mode development",
     "firefox:build": "TARGET_BROWSER=firefox webpack --mode development",
-    "firefox:production": "TARGET_BROWSER=firefox webpack --mode production",
+    "firefox:build:production": "TARGET_BROWSER=firefox webpack --mode production",
     "firefox:run": "TARGET_BROWSER=firefox web-ext run --target=firefox-desktop --source-dir=build/development/firefox",
+    "firefox:run:production": "TARGET_BROWSER=firefox web-ext run --target=firefox-desktop --source-dir=build/production/firefox",
     "firefox:watch": "TARGET_BROWSER=firefox webpack --watch --mode development",
-    "all-build": "run-p *:build",
-    "all-production": "run-p *:production",
+    "build": "run-p *:build",
+    "build:production": "run-p *:build:production",
     "clean": "rimraf build",
     "eslint": "eslint src/",
     "prettier:check": "prettier --check src/",
