--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -42,6 +42,10 @@ jobs:
       - name: Prettier
         run: npm run prettier:check
 
-      # Build
-      - name: Build ${{ matrix.browser }}
+      # Development Build
+      - name: Development Build ${{ matrix.browser }}
         run: npm run ${{ matrix.browser }}:build
+
+      # Production Build
+      - name: Production Build ${{ matrix.browser }}
+        run: npm run ${{ matrix.browser }}:build:production
