Sort compiler options
Sort compiler octions in the same order as document
https://www.typescriptlang.org/tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
     "strict": true,
+    "module": "commonjs",
     "rootDir": "src",
+    "typeRoots": ["node_modules/@types"],
     "esModuleInterop": true,
     "jsx": "react",
-    "typeRoots": ["node_modules/@types"]
+    "target": "es6"
   },
   "include": ["src/**/*"]
 }
