--- a/package.json
+++ b/package.json
@@ -83,11 +83,13 @@
     "@reduxjs/toolkit": "^1.9.0",
     "ajv": "^8.11.0",
     "better-ajv-errors": "^1.2.0",
+    "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "error-polyfill": "^0.1.3",
     "graphemesplit": "^2.4.4",
     "punycode": "^2.1.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
