Add test/ to prettier and eslint targets

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "build:production": "run-p *:build:production",
     "test": "jest",
     "clean": "rimraf build",
-    "eslint": "eslint src/",
-    "prettier:check": "prettier --check src/",
-    "prettier:write": "prettier --write src/",
+    "eslint": "eslint src/ test/",
+    "prettier:check": "prettier --check src/ test/",
+    "prettier:write": "prettier --write src/ test/",
     "stylelint:check": "stylelint src/**/*.scss",
     "stylelint:write": "stylelint --fix src/**/*.scss",
     "generate-validate-json": "ts-node src/generate-validate-json",
