--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@svgr/webpack": "^6.5.0",
     "@trivago/prettier-plugin-sort-imports": "^3.4.0",
+    "@types/difflib": "^0.2.1",
     "@types/jest": "^29.4.0",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
@@ -89,6 +90,7 @@
     "better-ajv-errors": "^1.2.0",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
+    "difflib": "^0.2.4",
     "error-polyfill": "^0.1.3",
     "graphemesplit": "^2.4.4",
     "punycode": "^2.1.1",
