--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "difflib": "^0.2.4",
     "error-polyfill": "^0.1.3",
     "graphemesplit": "^2.4.4",
+    "moment": "^2.29.4",
     "punycode": "^2.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
