--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "better-ajv-errors": "^1.2.0",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
     "difflib": "^0.2.4",
     "error-polyfill": "^0.1.3",
     "graphemesplit": "^2.4.4",
