--- a/src/manifest.json
+++ b/src/manifest.json
@@ -33,6 +33,10 @@
     }
   ],
 
+  "action": {
+    "default_popup": "popup.html"
+  },
+
   "options_ui": {
     "page": "options.html",
     "open_in_tab": true
