Request permissions when the browser actions is clicked
Delete default_popup from manifest.json, since the `browser.action.onClicked`
event will not fire if the browser action has a popup.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -33,9 +33,7 @@
     }
   ],
 
-  "action": {
-    "default_popup": "popup.html"
-  },
+  "action": {},
 
   "options_ui": {
     "page": "options.html",
