Use default_popup in Chrome
In Chrome, no need to request permissions, and openPopup() is currently
only available in the dev channel.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -33,7 +33,9 @@
     }
   ],
 
-  "action": {},
+  "action": {
+    "__chrome__default_popup": "popup.html"
+  },
 
   "options_ui": {
     "page": "options.html",
