--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,8 +1,5 @@
 {
   "plugin": ["stylelint-scss"],
-  "extends": [
-    "stylelint-config-recommended-scss",
-    "stylelint-prettier/recommended"
-  ],
+  "extends": ["stylelint-config-recommended-scss"],
   "ignoreFiles": ["**/node_modules/**"]
 }
