Use resolve.alias with Webpack

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,6 +2,6 @@
   "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "singleQuote": true,
   "bracketSameLine": true,
-  "importOrder": ["^[./]"],
+  "importOrder": ["<THIRD_PARTY_MODULES>", "^@lib/(.*)", "^[./]"],
   "importOrderSortSpecifiers": true
 }
