Add `@icon` to resolve.alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "baseUrl": "./",
     "module": "commonjs",
     "paths": {
+      "@icon/*": ["src/icon/*"],
       "@lib/*": ["src/lib/*"]
     },
     "rootDir": "src",
