--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,6 +2,11 @@
   "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "singleQuote": true,
   "bracketSameLine": true,
-  "importOrder": ["<THIRD_PARTY_MODULES>", "^@lib/(.*)", "^[./]"],
+  "importOrder": [
+    "<THIRD_PARTY_MODULES>",
+    "^@lib/(.*)",
+    "^@icon/(.*)",
+    "^[./]"
+  ],
   "importOrderSortSpecifiers": true
 }
