Use '~' as an alias to '<RootDir>/src'
Delete aliases (@lib & @icon).

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,11 +2,6 @@
   "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "singleQuote": true,
   "bracketSameLine": true,
-  "importOrder": [
-    "<THIRD_PARTY_MODULES>",
-    "^@lib/(.*)",
-    "^@icon/(.*)",
-    "^[./]"
-  ],
+  "importOrder": ["<THIRD_PARTY_MODULES>", "^~/(.*)", "^[./]"],
   "importOrderSortSpecifiers": true
 }
