--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,10 +5,11 @@
 
   "__prod__permissions": ["storage", "tabs"],
   "__dev__permissions": ["cookies", "storage", "tabs"],
-  "__prod__host_permissions": ["https://api.twitter.com/2/*"],
+  "__prod__host_permissions": ["https://api.twitter.com/2/*", "https://*/*"],
   "__dev__host_permissions": [
     "https://twitter.com/*",
-    "https://api.twitter.com/2/*"
+    "https://api.twitter.com/2/*",
+    "https://*/*"
   ],
 
   "__chrome__background": {
