--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@types/chrome": "^0.0.246",
     "@types/difflib": "^0.2.2",
     "@types/jest": "^29.5.4",
     "@types/react": "^18.2.21",
