--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,12 +7,8 @@
   "__chrome|dev__permissions": ["cookies", "offscreen", "storage", "tabs"],
   "__firefox|prod__permissions": ["storage", "tabs"],
   "__firefox|dev__permissions": ["cookies", "storage", "tabs"],
-  "__prod__host_permissions": ["https://api.twitter.com/2/*", "https://*/*"],
-  "__dev__host_permissions": [
-    "https://twitter.com/*",
-    "https://api.twitter.com/2/*",
-    "https://*/*"
-  ],
+  "__prod__host_permissions": ["https://*/*"],
+  "__dev__host_permissions": ["https://twitter.com/*", "https://*/*"],
 
   "__chrome__background": {
     "service_worker": "background.js",
