--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,8 @@
 {
   "plugin": ["stylelint-scss"],
-  "extends": ["stylelint-config-recommended-scss"],
+  "extends": [
+    "stylelint-config-recommended-scss",
+    "stylelint-config-recess-order"
+  ],
   "ignoreFiles": ["**/node_modules/**"]
 }
