--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "sass": "^1.67.0",
     "sass-loader": "^13.3.2",
     "stylelint": "^15.10.3",
+    "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-recommended-scss": "^13.0.0",
     "stylelint-prettier": "^4.0.2",
     "stylelint-scss": "^5.1.0",
