--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.26",
+    "@types/react-transition-group": "^4.4.9",
     "@types/redux-logger": "^3.0.9",
     "@types/webextension-polyfill": "^0.10.2",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
@@ -101,6 +102,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "webextension-polyfill": "^0.10.0"
