--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,9 +4,15 @@
   "version": "_",
 
   "__chrome|prod__permissions": ["offscreen", "storage", "tabs"],
-  "__chrome|dev__permissions": ["cookies", "offscreen", "storage", "tabs"],
+  "__chrome|dev__permissions": [
+    "cookies",
+    "downloads",
+    "offscreen",
+    "storage",
+    "tabs"
+  ],
   "__firefox|prod__permissions": ["storage", "tabs"],
-  "__firefox|dev__permissions": ["cookies", "storage", "tabs"],
+  "__firefox|dev__permissions": ["cookies", "downloads", "storage", "tabs"],
   "__prod__host_permissions": ["https://*/*"],
   "__dev__host_permissions": ["https://twitter.com/*", "https://*/*"],
 
