--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,8 @@
 {
-  "plugins": ["@trivago/prettier-plugin-sort-imports"],
+  "experimentalTernaries": true,
   "singleQuote": true,
   "bracketSameLine": true,
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "importOrder": ["<THIRD_PARTY_MODULES>", "^~/(.*)", "^[./]"],
   "importOrderSortSpecifiers": true
 }
