--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/jest": "^29.5.10",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
+    "@types/react-modal": "^3.16.3",
     "@types/react-redux": "^7.1.31",
     "@types/react-transition-group": "^4.4.9",
     "@types/redux-logger": "^3.0.12",
@@ -101,6 +102,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.1.3",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
