--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.7.6",
+    "mini-svg-data-uri": "^1.4.4",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "npm-check-updates": "^16.14.11",
     "npm-run-all": "^4.1.5",
