--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-redux": "^4.1.0",
     "eslint-webpack-plugin": "^4.0.1",
+    "globals": "^13.24.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.7.6",
