--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,16 +3,28 @@
   "name": "Scrapbox Copy Tweets",
   "version": "_",
 
-  "__chrome|prod__permissions": ["offscreen", "storage", "tabs"],
+  "__chrome|prod__permissions": [
+    "clipboardWrite",
+    "offscreen",
+    "storage",
+    "tabs"
+  ],
   "__chrome|dev__permissions": [
+    "clipboardWrite",
     "cookies",
     "downloads",
     "offscreen",
     "storage",
     "tabs"
   ],
-  "__firefox|prod__permissions": ["storage", "tabs"],
-  "__firefox|dev__permissions": ["cookies", "downloads", "storage", "tabs"],
+  "__firefox|prod__permissions": ["clipboardWrite", "storage", "tabs"],
+  "__firefox|dev__permissions": [
+    "clipboardWrite",
+    "cookies",
+    "downloads",
+    "storage",
+    "tabs"
+  ],
   "__prod__host_permissions": ["https://*/*"],
   "__dev__host_permissions": ["https://twitter.com/*", "https://*/*"],
 
