Open clipboard.html in a tab,when clicling browser.action

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -51,9 +51,7 @@
     }
   ],
 
-  "action": {
-    "__chrome__default_popup": "popup.html"
-  },
+  "action": {},
 
   "options_ui": {
     "page": "options.html",
