--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
     "ajv-formats": "^3.0.1",
-    "ajv-formats-draft2019": "^1.6.1",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.0.0",
     "css-minimizer-webpack-plugin": "^6.0.0",
@@ -77,6 +76,8 @@
     "rimraf": "^5.0.5",
     "sass": "^1.74.1",
     "sass-loader": "^14.1.1",
+    "schemes": "^1.4.0",
+    "smtp-address-parser": "^1.0.10",
     "stylelint": "^16.3.1",
     "stylelint-config-recess-order": "^5.0.0",
     "stylelint-config-recommended-scss": "^14.0.0",
@@ -86,6 +87,7 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.4",
+    "uri-js": "^4.4.1",
     "web-ext": "^7.11.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
