--- a/src/manifest.json
+++ b/src/manifest.json
@@ -26,7 +26,11 @@
     "tabs"
   ],
   "__prod__host_permissions": ["https://*/*"],
-  "__dev__host_permissions": ["https://twitter.com/*", "https://*/*"],
+  "__dev__host_permissions": [
+    "https://twitter.com/*",
+    "https://x.com/*",
+    "https://*/*"
+  ],
 
   "__chrome__background": {
     "service_worker": "background.js",
@@ -38,7 +42,7 @@
 
   "content_scripts": [
     {
-      "matches": ["https://twitter.com/*"],
+      "matches": ["https://twitter.com/*", "https://x.com/*"],
       "run_at": "document_start",
       "js": ["content-twitter.js"],
       "css": ["content-twitter.css"]
