Add cosen.se to manifest.json
The service name is changed from "Scrapbox" to "Helpfeel Cosense" on
2024-05-21
> https://prtimes.jp/main/html/rd/p/000000323.000027275.html

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -48,7 +48,7 @@
       "css": ["content-twitter.css"]
     },
     {
-      "matches": ["https://scrapbox.io/*"],
+      "matches": ["https://scrapbox.io/*", "https://cosen.se/*"],
       "run_at": "document_start",
       "js": ["content-scrapbox.js"],
       "css": ["content-scrapbox.css"]
