Add web-ext-config.{cjs, mjs} to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 build/
 test_data.json
-web-ext-config.js
 web-ext-artifacts/
+web-ext-config.cjs
+web-ext-config.js
+web-ext-config.mjs
 
 # Node.gitignore
 # Logs
