--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
   "scripts": {
     "chrome:build": "TARGET_BROWSER=chrome webpack --mode development",
     "chrome:build:production": "TARGET_BROWSER=chrome webpack --mode production",
-    "chrome:artifact": "web-ext build --source-dir=build/production/chrome --filename={name}-chrome-{version}.zip",
+    "chrome:build:artifact": "web-ext build --source-dir=build/production/chrome --filename={name}-chrome-{version}.zip",
     "chrome:run": "PATH=./bin:$PATH TARGET_BROWSER=chrome web-ext run --target=chromium --source-dir=build/development/chrome",
     "chrome:run:production": "PATH=./bin:$PATH TARGET_BROWSER=chrome web-ext run --target=chromium --source-dir=build/production/chrome",
     "chrome:watch": "TARGET_BROWSER=chrome webpack --watch --mode development",
     "firefox:build": "TARGET_BROWSER=firefox webpack --mode development",
     "firefox:build:production": "TARGET_BROWSER=firefox webpack --mode production",
-    "firefox:artifact": "web-ext build --source-dir=build/production/firefox --filename={name}-firefox-{version}.zip",
+    "firefox:build:artifact": "web-ext build --source-dir=build/production/firefox --filename={name}-firefox-{version}.zip",
     "firefox:run": "TARGET_BROWSER=firefox web-ext run --target=firefox-desktop --source-dir=build/development/firefox",
     "firefox:run:production": "TARGET_BROWSER=firefox web-ext run --target=firefox-desktop --source-dir=build/production/firefox",
     "firefox:watch": "TARGET_BROWSER=firefox webpack --watch --mode development",
     "build": "run-p *:build",
     "build:production": "run-p *:build:production",
-    "artifact": "run-p *:artifact",
+    "build:artifact": "run-p *:build:artifact",
     "test": "jest",
     "clean": "rimraf build",
     "eslint": "eslint src/ test/",
