--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "classnames": "^2.5.1",
     "dayjs": "^1.11.11",
     "difflib": "^0.2.4",
+    "fast-deep-equal": "^3.1.3",
     "punycode": "^2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
