--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "^5.1.0-rc-ed966dac-20241007",
     "eslint-plugin-react-redux": "^4.2.0",
     "eslint-webpack-plugin": "^4.2.0",
     "globals": "^15.11.0",
